--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "server/server.ts",
-      "use": "@now/node@canary"
+      "src": "server/server.js",
+      "use": "@now/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "server/server.ts"
+      "dest": "server/server.js"
     }
   ]
 }
