--- a/now.json
+++ b/now.json
@@ -3,7 +3,7 @@
   "builds": [
     {
       "src": "server/server.js",
-      "use": "@now/node"
+      "use": "@now/node-server"
     }
   ],
   "routes": [
