--- a/now.json
+++ b/now.json
@@ -2,14 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "server/server.js",
+      "src": "server/server.ts",
       "use": "@now/node-server"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "server/server.js"
+      "dest": "server/server.ts"
     }
   ]
 }
