--- a/now.json
+++ b/now.json
@@ -16,7 +16,7 @@
       "dest": "server/server.ts"
     },
     {
-      "src": "/playing/*",
+      "src": "/playing",
       "dest": "server/server.ts"
     }
   ]
