--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.6",
     "@types/react-router-dom": "^5.1.5",
+    "@vercel/node": "^1.8.4",
     "axios": "^0.19.2",
     "ejs": "^3.1.5",
     "jss": "^10.4.0",
